refine user auth
