# docs/user/user_swagger.json
@@ -155,15 +155,6 @@
                 }
             }
         },
-        "common.SuccessMessage": {
-            "type": "object",
-            "properties": {
-                "msg": {
-                    "type": "string",
-                    "example": "ok"
-                }
-            }
-        },
         "user.CreateUserRequest": {
             "type": "object",
             "required": [
